
  * Sylvain Ferriol
    - add plip in devnames
  * Joshua Kwan
    - add more devnames descriptions for powerpc
  * Joey Hess
    - Load yenta_socket a bit later, after the discover run, because it
      looked strange to load a module before it said it was detecting
      hardware. It still loads before any other modules.
    - Add progress display when loading modules for firewire CD.

 -- Joshua Kwan <joshk@triplehelix.org>  Sun,  4 Jul 2004 14:01:20 -0700

ddetect (0.104) unstable; urgency=low

  * Joey Hess
    - sleep may not be available, so don't completly crash out if it's not.
      (Of course, instead something with a race that the sleep call is working
      around will probably not work right.)

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Jul 2004 17:51:00 -0400

ddetect (0.103) unstable; urgency=low

  * Sven Luther
    - Added support for loading the i8042 and atkbd modules on
    powerpc/chrp and prep in order to have keyboard input :).
  * Joshua Kwan
    - Use devnames descriptions for ethdetect.sh where possible.
      Closes: #225166
    - Create 'BLACKLIST' entries for stuff that shouldn't be seen in
      ethdetect's module loading menu.
    - Update a whole ton of descriptions.
  * Joey Hess
    - Don't mess with the seen flag of a question that has not yet been
      displayed, that tickled a cdebconf bug (#257180) and broke pcmcia.

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Jul 2004 15:55:42 -0400

ddetect (0.102) unstable; urgency=low

  * Joshua Kwan
    - Holy batman, Discover groks SBUS now! Disable the sunhme registration
      hack in hw-detect.sh.
    - And with that, add sbus to the list of busses probed by discover's
      invocation.
    - Fix Joey's template typo that caused modules to stop loading.
    - Correct some trivial Makefile style things.
  * Joey Hess
    - Add a "no ethernet card" option in ethdetect if autodetection finds
      nothing, to break out of the loop. Closes: #255247