@@ -9,6 +9,8 @@ ddetect (0.105) UNRELEASED; urgency=low
       looked strange to load a module before it said it was detecting
       hardware. It still loads before any other modules.
     - Add progress display when loading modules for firewire CD.
+    - Try to enable firewire ethernet support if ohci1394 is loaded.
+      For now it does no real detection, just loads it.
 
  -- Joshua Kwan <joshk@triplehelix.org>  Sun,  4 Jul 2004 14:01:20 -0700
 
